progress on game over logic

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <main>
-      <section class="board"></section>
+      <section class="board"><section class="overflow"></section></section>
     </main>
 
     <script src="./app.js"></script>
