--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
   <body>
     <main>
       <section class="board"><section class="overflow"></section></section>
+      <div class="modal">
+        <h1 class="game-over">Game Over</h1>
+        <button class="replay">replay</button>
+      </div>
     </main>
 
     <script src="./app.js"></script>
